--- a/packages/node/base/package.json
+++ b/packages/node/base/package.json
@@ -50,12 +50,12 @@
     "@angular/platform-server-12": "npm:@angular/platform-server@12.2.13",
     "@angular/router-12": "npm:@angular/router@12.2.13",
     "@babel/cli": "7.16.0",
-    "@babel/core": "7.8.6",
+    "@babel/core": "7.18.6",
     "@babel/generator": "7.8.6",
     "@babel/parser": "7.9.4",
     "@babel/preset-env": "7.10.2",
     "@babel/template": "7.8.6",
-    "@babel/traverse": "7.8.6",
+    "@babel/traverse": "7.23.2",
     "@bazel/concatjs": "4.4.2",
     "@bazel/esbuild": "4.4.2",
     "@bazel/jasmine": "4.4.2",
@@ -122,7 +122,7 @@
     "jasmine-core": "^3.5.0",
     "jquery": "3.6.0",
     "js-levenshtein": "^1.1.6",
-    "karma": "~6.3.0",
+    "karma": "6.3.16",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
@@ -134,18 +134,18 @@
     "protractor": "^7.0.0",
     "puppeteer": "10.2.0",
     "reflect-metadata": "^0.1.3",
-    "requirejs": "^2.3.6",
-    "rollup": "~2.59.0",
+    "requirejs": "2.3.7",
+    "rollup": "2.79.2",
     "rollup-plugin-preserve-shebang": "^1.0.1",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rxjs": "^6.6.7",
     "selenium-webdriver": "3.5.0",
-    "shelljs": "^0.8.4",
+    "shelljs": "0.8.5",
     "source-map": "^0.6.1",
     "source-map-support": "0.5.21",
     "sourcemap-codec": "^1.4.8",
     "systemjs": "0.18.10",
-    "terser": "^5.8.0",
+    "terser": "5.14.2",
     "tmp": "0.2.1",
     "tsickle": "0.38.1",
     "tslib": "^2.3.0",
@@ -168,7 +168,7 @@
     "cldr": "7.1.1",
     "cldrjs": "0.5.5",
     "conventional-changelog": "^3.1.24",
-    "firebase-tools": "^9.0.0",
+    "firebase-tools": "13.6.1",
     "glob": "7.2.0",
     "gulp": "^4.0.2",
     "gulp-conventional-changelog": "^2.0.35",
@@ -177,7 +177,7 @@
     "karma-sauce-launcher": "^4.3.6",
     "madge": "^5.0.0",
     "multimatch": "^6.0.0",
-    "semver": "^7.3.5",
+    "semver": "7.5.2",
     "ts-node": "^10.0.0",
     "tsec": "0.2.1",
     "tslint-eslint-rules": "5.4.0",
